--- a/form.html
+++ b/form.html
@@ -10,6 +10,7 @@
 
     <a href="index.html">Index</a>
     <a href="table.html">Table</a>
+    <body style="background-color:lightsteelblue;">
 
 <form>
     Create a user name:<br/>
@@ -27,7 +28,7 @@
     Age:
     <input type="number" name="age" min="0" max="101"><br/>
 
-    Birthday:
+    Birthday:<br/>
     <input type="date" name="birthday"><br/>
 
     <input type="submit">
