--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title>Ari's Simple: Website!</title>
     <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
 </head>
-<body>
+<body style="background-color:lightsteelblue;">
 
     <a href="form.html">Form</a>
     <a href="table.html">Table</a>
     <br/>
     <hr/>
 
-    <iframe src="form.html" height="275" width="600"></iframe>
-    <iframe src="table.html" height="275" width="600"></iframe>
+    <iframe style="background-color:white;"src="form.html" height="275" width="600"></iframe>
+    <iframe style="background-color:white;"src="table.html" height="275" width="600"></iframe>
 
 </body>
 </html>
