--- a/table.html
+++ b/table.html
@@ -9,6 +9,7 @@
 
     <a href="index.html">Index</a>
     <a href="form.html">Form</a>
+    <body style="background-color:lightsteelblue;">
 
     <table style="border: 3px dashed blue;">
         <thead>
