--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
 </head>
 <body style="background-color:lightsteelblue;">
 
-    <a href="form.html">Form</a>
-    <a href="table.html">Table</a>
-    <br/>
+    <h1 style="font-family:Cursive;">Ari's Simple Website!</h1>
+
     <hr/>
 
-    <iframe style="background-color:white;"src="form.html" height="275" width="600"></iframe>
-    <iframe style="background-color:white;"src="table.html" height="275" width="600"></iframe>
+    <iframe style="background-color:white;"src="table.html" height="255" width="600"></iframe>
+    <iframe style="background-color:white;"src="form.html" height="255" width="200"></iframe>
 
+    <hr/>
+
+        <img style="height:375px; width:810px;  " src="egyptFanArt.jpg"/>
+
+    <hr/>
+    <a href="form.html">Form</a>
+    <a href="table.html">Table</a>
 </body>
 </html>
