--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
 </head>
 <body style="background-color:lightsteelblue;">
-
-    <h1 style="font-family:Cursive;">Ari's Simple Website!</h1>
+<center>
+    <h1 style="font-family:Cursive; ">Ari's Simple Website!</h1>
+</center>
 
     <hr/>
 
