--- a/table.html
+++ b/table.html
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;
-                font-family:Cursive; color:white">Null</th>
+                font-family:Cursive; color:white"></th>
                 <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;
                 font-family:Cursive;">White</th>
                 <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;
