--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Ari's Simple: Website!</title>
-    <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
-</head>
-<body style="background-color:lightsteelblue;">
-<center>
-    <h1 style="font-family:Cursive; ">Ari's Simple Website!</h1>
-</center>
+    <head>
+        <meta charset="UTF-8">
+        <title>Ari's Simple: Website!</title>
+        <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
+        <link rel="stylesheet" href="SimpleStyle.css">
+    </head>
+    <body style="background-color:lightsteelblue;">
+        <h1 style="font-family:Cursive; ">Ari's Simple Website!</h1>
 
-    <hr/>
+        <hr/>
 
-    <iframe style="background-color:white;"src="table.html" height="255" width="600"></iframe>
-    <iframe style="background-color:white;"src="form.html" height="255" width="200"></iframe>
+        <iframe style="background-color:white;"src="table.html" height="255" width="600"></iframe>
+        <iframe style="background-color:white;"src="form.html" height="255" width="200"></iframe>
 
-    <hr/>
+        <hr/>
 
         <img style="height:375px; width:810px;  " src="egyptFanArt.jpg"/>
 
-    <hr/>
-    <a href="form.html">Form</a>
-    <a href="table.html">Table</a>
-</body>
+        <hr/>
+        <div>
+            <a href="form.html">Form </a>*
+            <a href="table.html">Table </a>
+        </div>
+    </body>
 </html>
