--- a/form.html
+++ b/form.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Ari's Simple: Standard Form</title>
-    <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
-
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Ari's Simple: Standard Form</title>
+        <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
+        <link rel="stylesheet" href="SimpleStyle.css">
+    </head>
 
 
     <body style="background-color:lightsteelblue;">
 
-<form>
-    Create a user name:<br/>
-    <input type="text" name="userName"><br/>
-    Create a display name:<br/>
-    <input type="text" name="displayName"><br/>
+        <form>
+            Create a user name:<br/>
+            <input type="text" name="userName"><br/>
+            Create a display name:<br/>
+            <input type="text" name="displayName"><br/>
 
-    Create a password:<br/>
-    <input type="password" name="password"><br/>
+            Create a password:<br/>
+            <input type="password" name="password"><br/>
 
-    <input type="radio" name="gender" value="other"checked>Other<br/>
-    <input type="radio" name="gender" value="female">Female<br/>
-    <input type="radio" name="gender" value="male">Male<br/>
+            <input type="radio" name="gender" value="other"checked>Other<br/>
+            <input type="radio" name="gender" value="female">Female<br/>
+            <input type="radio" name="gender" value="male">Male<br/>
 
-    Age:
-    <input type="number" name="age" min="0" max="101"><br/>
+            Age:
+            <input type="number" name="age" min="0" max="101"><br/>
 
-    Birthday:<br/>
-    <input type="date" name="birthday"><br/>
+            Birthday:<br/>
+            <input type="date" name="birthday"><br/>
 
-    <input type="submit">
-
-
-
-</form>
-<hr/>
-<a href="index.html">Index</a>
-<a href="table.html">Table</a>
-
-</body>
+            <input type="submit">
+        </form>
+        <hr/>
+        <div>
+            <a href="index.html">Index </a>*
+            <a href="table.html">Table </a>
+        </div>
+    </body>
 </html>
