--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Ari's Simple: Standard Form</title>
+        <title>Ari's Simple Form</title>
         <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
         <link rel="stylesheet" href="SimpleStyle.css">
     </head>
