--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Ari's Simple: Website!</title>
+        <title>Ari's Simple Website</title>
         <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
         <link rel="stylesheet" href="SimpleStyle.css">
     </head>
