--- a/form.html
+++ b/form.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Ari's Simple Form</title>
-        <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="cosineTangent.gif" type="image/x-icon" />
         <link rel="stylesheet" href="SimpleStyle.css">
     </head>
 
 
-    <body style="background-color:lightsteelblue;">
+    <body style="background-color:aliceblue;">
 
         <form>
             Create a user name:<br/>
