--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Ari's Simple Website</title>
-        <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="cosineTangent.gif" type="image/x-icon" />
         <link rel="stylesheet" href="SimpleStyle.css">
     </head>
-    <body style="background-color:lightsteelblue;">
+    <body style="background-color:aliceblue;">
         <h1 style="font-family:Cursive; ">Ari's Simple Website!</h1>
 
         <hr/>
@@ -16,7 +16,7 @@
 
         <hr/>
 
-        <img style="height:375px; width:810px;  " src="egyptFanArt.jpg"/>
+        <img style="height:375px; width:810px;  " src="web-safe-color-chart.png"/>
 
         <hr/>
         <div>
