--- a/table.html
+++ b/table.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Ari's Simple HTML Color Table</title>
-        <link rel="shortcut icon" href="SiteIcon.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="cosineTangent.gif" type="image/x-icon" />
         <link rel="stylesheet" href="SimpleStyle.css">
     </head>
 
-    <body style="background-color:lightsteelblue;">
+    <body style="background-color: aliceblue;">
 
         <table style="border: 3px dashed blue;">
             <thead>
