--- a/form.html
+++ b/form.html
@@ -6,10 +6,7 @@
         <link rel="shortcut icon" href="cosineTangent.gif" type="image/x-icon" />
         <link rel="stylesheet" href="SimpleStyle.css">
     </head>
-
-
-    <body style="background-color:aliceblue;">
-
+    <body>
         <form>
             Create a user name:<br/>
             <input type="text" name="userName"><br/>
