--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
         <link rel="shortcut icon" href="cosineTangent.gif" type="image/x-icon" />
         <link rel="stylesheet" href="SimpleStyle.css">
     </head>
-    <body style="background-color:aliceblue;">
+    <body>
         <h1 style="font-family:Cursive; ">Ari's Simple Website!</h1>
-
         <hr/>
-
-        <iframe style="background-color:white;"src="table.html" height="255" width="600"></iframe>
-        <iframe style="background-color:white;"src="form.html" height="255" width="200"></iframe>
-
+        <iframe style="background-color:white;"src="table.html" height="280" width="650"></iframe>
+        <iframe style="background-color:white;"src="form.html" height="280" width="200"></iframe>
         <hr/>
-
         <img style="height:375px; width:810px;  " src="web-safe-color-chart.png"/>
-
         <hr/>
         <div>
             <a href="form.html">Form </a>*
