--- a/table.html
+++ b/table.html
@@ -7,32 +7,32 @@
         <link rel="stylesheet" href="SimpleStyle.css">
     </head>
 
-    <body style="background-color: aliceblue;">
+    <body>
 
-        <table style="border: 3px dashed blue;">
+        <table style="border: 3px dashed darkblue; table-layout: auto">
             <thead>
                 <tr>
-                    <th colspan="6" style="font-family:Cursive; color:blueviolet; border-bottom:3px solid blue">
+                    <th colspan="6" style="font-family:Cursive; color:blueviolet; border-bottom:3px solid darkblue">
                     <em>HTML Color Table</em> </th>
                 </tr>
                 <tr>
-                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;
+                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;
                     font-family:Cursive; color:white"></th>
-                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;
+                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;
                     font-family:Cursive;">White</th>
-                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;
+                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;
                     font-family:Cursive;">Red</th>
-                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;
+                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;
                     font-family:Cursive;">Yellow</th>
-                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;
+                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;
                     font-family:Cursive;">Blue</th>
-                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;
+                    <th style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;
                     font-family:Cursive;">Black</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;">
+                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;">
                     <em>White</em></td>
                     <td style="padding:5px;">White</td>
                     <td style="padding:5px;">Pink</td>
@@ -41,7 +41,7 @@
                     <td style="padding:5px;">Grey</td>
                 </tr>
                 <tr>
-                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;">
+                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;">
                     <em>Red</em></td>
                     <td style="padding:5px;">Pink</td>
                     <td style="padding:5px;">Red</td>
@@ -50,7 +50,7 @@
                     <td style="padding:5px;">DarkRed</td>
                 </tr>
                 <tr>
-                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;">
+                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;">
                     <em>Yellow</em></td>
                     <td style="padding:5px;">LightYellow</td>
                     <td style="padding:5px;">Orange</td>
@@ -59,7 +59,7 @@
                     <td style="padding:5px;">DarkGoldenRod</td>
                 </tr>
                 <tr>
-                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;">
+                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;">
                     <em>Blue</em></td>
                     <td style="padding:5px;">LightBlue</td>
                     <td style="padding:5px;">Purple</td>
@@ -68,7 +68,7 @@
                     <td style="padding:5px;">DarkBlue</td>
                 </tr>
                 <tr>
-                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid blue;">
+                    <td style="padding:5px;border-right:1px solid black;border-bottom:1px solid darkblue;">
                     <em>Black</em></td>
                     <td style="padding:5px;">Grey</td>
                     <td style="padding:5px;">DarkRed</td>
